adds pet selection

--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
             }
 
 
+            if(feels=="scaly" && likes=="ridden" && eats=="carrots"){
+                pet = "fish";
+            }
+
+            if(feels=="scaly" && likes=="petted" && eats=="pets"){
+                pet = "snake";
+            }
+
+            if(feels=="scaly" && likes=="petted" && eats=="carrots"){
+                pet = "hermit crab";
+            }
+
+            if(feels=="fluffy" && likes=="ridden" && eats=="pets"){
+                pet = "bear";
+            }
+
+            
+            if(feels=="fluffy" && likes=="ridden" && eats=="carrots"){
+                pet = "dog";
+            }
+
+            if(feels=="fluffy" && likes=="petted" && eats=="pets"){
+                pet = "ferret";
+            }
+
+
+
             let output = "";
             output += `<p>My pet is a: ${pet}</p>`;
             output += `<p>My pet feels: ${feels}</p>`;
